# MR2021

./: Matrix_liba_b.cpp  readme.txt
Anton_Ilyasov/List/: List.cpp  List.h  main.cpp
Anton_Ilyasov/Matrix/: Matrix.Libryary.cpp  Matrix.Libryary.h  main.cpp
Anton_Ilyasov/krestiki_noliki_igrok_to_bot/: bot_move.c  bot_move.h  global_per.c  global_per.h  main.c
Anton_Ilyasov/krestiki_noliki_igrok_to_igtok/: main.c
Anton_Ilyasov/mortgage_and_deposit/: main.c
Anton_Ilyasov/mortgage_deposit_structure/: main.c
Anton_Ilyasov/simple_test_c++/: main.cpp
Anton_Ilyasov/Поиск в ширину и глубину/: graph.cpp  graph.h  main.cpp
Artem_Prokofiev/GTK x-o/: CMakeLists.txt  main.c
Artem_Prokofiev/HelloWorld/: main.c
Artem_Prokofiev/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Artem_Prokofiev/Test/: main.cpp
Artem_Prokofiev/Tictactoe/: CMakeLists.txt  main.c
Artem_Prokofiev/Tictactoewithbot/: main.c
Chebotareva Valeria/martixxxlib/: CMakeLists.txt  library.cpp  library.h
Chebotareva Valeria/quizzzzz/: CMakeLists.txt  main.cpp
Chebotareva Valeria/untitledXO/: CMakeLists.txt  main.c
Chernikov_Alexandr/laba4/: CMakeLists.txt  main.c
Chernikov_Alexandr/matrix/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  unnecessary.cpp
Chernikov_Alexandr/mortgage_and_deposit/: CMakeLists.txt  main.c
Chernikov_Alexandr/simple_test/: CMakeLists.txt  main.cpp  report.md
Chernikov_Alexandr/string/: main.c
Chernikov_Alexandr/tic-tac-toe/: CMakeLists.txt  bot.c  bot.h  cli.c  cli.h  game_logic.c  game_logic.h  gui.c  gui.h  main.c
Chernikov_Alexandr/untitled/: main.cpp
Chernikov_Alexandr/Курсовая работа/: graph.cpp  graph.h  main.cpp
Chernikov_Alexandr/Курсовая работа/Tarjan's bridge-finding algorithm/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  test.cpp
Elkin_Maxim/Floyd-Warshall/: main.cpp  readme.txt
Elkin_Maxim/Ipoteka/: main.c
Elkin_Maxim/Krestik_nulik/: CMakeLists.txt  main.c
Elkin_Maxim/Krestik_nulik_gui_bot/: BotXO.c  BotXO.h  CMakeLists.txt  main.c
Elkin_Maxim/Krestik_nulik_gui_without_bot/: CMakeLists.txt  main.c
Elkin_Maxim/Matrix/: CMakeLists.txt  main.cpp  matrix_lib.cpp  matrix_lib.h
Elkin_Maxim/krestik_nulik_with_bot/: BotXO.c  BotXO.h  CMakeLists.txt  main.c
Elkin_Maxim/quiz/: main.cpp
Fironov_Alexey/CoursWork/: main.cpp  Курсовая работа.docx
Fironov_Alexey/Matrix/: main.cpp  matrix_lib.cpp  matrix_lib.h
Fironov_Alexey/MortgageAndDeposit/: CMakeLists.txt  main.c
Fironov_Alexey/Quiz/: CMakeLists.txt  main.cpp  question.cpp  question.h  team.cpp  team.h
Fironov_Alexey/Tic_Tac/: main.c
Gavrilov_Dmitry/: tic tac toe
Gavrilov_Dmitry/Matrix/: CMakeLists.txt  Matrix_lib.cpp  Matrix_lib.h  main.cpp
Gavrilov_Dmitry/quiz/: CMakeLists.txt  main.cpp  text.h
Gavrilov_Dmitry/tic tac toe ai/: CMakeLists.txt  main.c
Gavrilov_Dmitry/tic-tac-tao_gtl_with_bot/: Bot.c  Bot.h  CMakeLists.txt  main.c
Graph/: .gitignore  CMakeLists.txt  graph.cpp  graph.h  main.cpp  readme.md
Graph/docs/: tests.md
Graph/tests/: BaseGraph_tests.cpp  GraphTarjansBridges_tests.cpp  Vertex_tests.cpp
Graph/tests/GraphTarjansBridges_tests/: chain_graph_test.cpp  empty_graph_test.cpp  graph_without_edges_test.cpp  normal_graph_test.cpp
Kildibekova_Anna/: Is-there-a-substring-in-the-string.c  tic-tac-toe_v.1.c
Kildibekova_Anna/A-star algorithm/: A-star algorithm.docx  A-star.cpp  A-star.h  CMakeLists.txt  main.cpp
Kildibekova_Anna/Test/: CMakeLists.txt  Tree_test.cpp
Kildibekova_Anna/Work_with_Matrixes/: CMakeLists.txt  main.cpp  matrix_Lib.cpp  matrix_Lib.h
Kildibekova_Anna/tic-tac-toe/: CMakeLists.txt  main.c  tic-tac-toe_bot.c  tic-tac-toe_bot.h
Klinovitskij_Andrey/Coursework/: main.cpp
Klinovitskij_Andrey/Hello World/: CMakeLists.txt
Klinovitskij_Andrey/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
Klinovitskij_Andrey/Mortgage/: CMakeLists.txt  main.c
Klinovitskij_Andrey/QuestC++/: CMakeLists.txt  main.cpp
Klinovitskij_Andrey/Tic_Tac_Toe/: CMakeLists.txt  main.c  readme.txt
Klinovitskij_Andrey/Tic_Tac_Toe_GTK/: CMakeLists.txt  main.c
Kolesov_Sergey/Matrix/: Matrix.cpp  Matrix.h  main.cpp
Kolesov_Sergey/Representation graph/: Способы представления графов.docx
Kolesov_Sergey/quest/: main.cpp  quest.cbp  quest.depend
Kolesov_Sergey/tic-tac-toe/: main.c
Kolesov_Sergey/tic-tac-toe_robot/: main.c
Kopeyko_igor/Krestiki_noliki_play_against_computer/: CMakeLists.txt  X_O_bot.c
Kopeyko_igor/Lib_Matrix/: CMakeLists.txt  main.cpp  matrixlib.cpp  matrixlib.h
Kopeyko_igor/Test_s_variantami_otveta/: CMakeLists.txt  main.cpp
Kopeyko_igor/btree/: CMakeLists.txt  b_tree.cpp  b_tree.h  main.cpp  Курсовая ООП Копейко ИВ.docx
Kopeyko_igor/investing_credit/: CMakeLists.txt  main.c
Kopeyko_igor/krestiki_noliki/: CMakeLists.txt  main.c
Koziura_Konstantin/Matrix/: library.cpp  library.h
Koziura_Konstantin/Quiz/: main.cpp
Koziura_Konstantin/Tic_tac_toe/: CMakeLists.txt  main.c
Koziura_Konstantin/Курсовая работа/: main.cpp
Lazarev Maxim/QuizQt_PreAlpha/: CMakeLists.txt  main.cpp  mainwindow.cpp  quiz.h  (+3 more)
Lazarev Maxim/Крестики-Нолики_gtk(Alpha)/: BotIO.cpp  BotIO.h  CMakeLists.txt  XOHeader.cpp  XOHeader.h  gtk_lm.cpp  gtk_lm.h  gui.cpp  gui.h  logic.cpp  logic.h  main.cpp
Lazarev_Maxim/: R_Tree.docx  r-tree.cdw
MSA/: CMakeLists.txt  main.c
MSA/04/: CMakeLists.txt  main.c
Marat Mamiev/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.hpp
Matveev_Viktor/: main.c
Matveev_Viktor/X-O-Bot/: Bot_Strategy.cpp  Bot_Strategy.h  CMakeLists.txt  ReadMe.txt  X_O_Improved.cpp  X_O_Improved.h
Matveev_Viktor/X-O-GUI-NoBot/: CMakeLists.txt  GTK_X_O.c  GTK_X_O.h
Matveev_Viktor/X-O-OnC/: CMakeLists.txt  Test2.cpp  Test2.h
Mymrin_Anton/xo_gtk/: CMakeLists.txt  main.c
Ososov Yan/tic-tac-toe + gtk/: Bot.c  Bot.h  CMakeLists.txt  main.c
Skryl Mikhail/Tic-Tac-Toe + gui + bot/: Bot.c  Bot.h  CMakeLists.txt  main.c
Vestnikov_Roman/krestiki_noliki_GTK_GUI+bot/: CMakeLists.txt  Pictures-copy  bot.c  bot.h  check_library.h  main.c  types.h
shlykov_fedor/: Matrix  Matrix.h  MergeSort.cpp
Дмитрий Малинин/: main.cpp
(+270 files in other folders)
